--- a/QS-WVD/variables.template.yml
+++ b/QS-WVD/variables.template.yml
@@ -77,7 +77,7 @@ variables:
   value: "latest"
 
 - name: HostPoolName
-  value: "QS-WVD-HP"
+  value: "[hostpoolname]"
   
 - name: profilesStorageAccountName
   value: "[profilesStorageAccountName]"
