--- a/QS-WVD/variables.template.yml
+++ b/QS-WVD/variables.template.yml
@@ -78,7 +78,10 @@ variables:
 
 - name: HostPoolName
   value: "[hostpoolname]"
-  
+
+- name: vmNumberOfInstances
+  value: "[hostpoolVMCount]"
+
 - name: profilesStorageAccountName
   value: "[profilesStorageAccountName]"
 
