--- a/QS-WVD/pipeline.yml
+++ b/QS-WVD/pipeline.yml
@@ -404,8 +404,7 @@ stages:
 
                     Invoke-GeneralDeployment @functionInput -Verbose
                   errorActionPreference: stop
-                  azurePowerShellVersion: OtherVersion
-                  preferredAzurePowerShellVersion: 3.5.0
+                  azurePowerShellVersion: LatestVersion
                 enabled: true
 
   - deployment: Deploy_RemoteAppGroup
