--- a/QS-WVD/variables.template.yml
+++ b/QS-WVD/variables.template.yml
@@ -82,6 +82,9 @@ variables:
 - name: vmNumberOfInstances
   value: [hostpoolVMCount]
 
+- name: useAvailabilityZone
+  value: [useAvailabilityZone]
+
 - name: profilesStorageAccountName
   value: "[profilesStorageAccountName]"
 
