--- a/QS-WVD/pipeline.yml
+++ b/QS-WVD/pipeline.yml
@@ -59,8 +59,8 @@ stages:
                 name: Copy_wvdOptimizationTool_parameters
                 inputs:
                   SourceFolder: '$(Build.Repository.LocalPath)/QS-WVD/Parameters'
-                  Contents: 'wvdoptimizationtool.parameters.json'
-                  TargetFolder: '$(Pipeline.Workspace)/s/Uploads/WVDScripts/005-wvd-optimization-tool'
+                  Contents: 'wvdOptimizationTool.parameters.json'
+                  TargetFolder: '$(Pipeline.Workspace)/s/Uploads/WVDScripts/005-wvdOptimizationTool'
                   OverWrite: true
               - task: CopyFiles@2
                 name: Copy_Deployment_parameters
