--- a/QS-WVD/pipeline.yml
+++ b/QS-WVD/pipeline.yml
@@ -354,6 +354,7 @@ stages:
                       }
                     }
 
+                    $parameterObjects += @{ vmInitialNumber = $(vmInitialNumber) }
                     $parameterObjects += @{ vmNumberOfInstances = $(vmNumberOfInstances) }
                     $parameterObjects += @{ useAvailabilityZone = $(useAvailabilityZone) }
 
